--- a/grade.html
+++ b/grade.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade To SGPA</title>
+    <title>3-1 Semester SGPA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -83,18 +83,13 @@
                         <div class="sub sub-detail1">CSE 354</div>
                         <div class="sub sub-detail2">Internship Program</div>
                         <div class="sub sub-detail3">
-                            <form action="/tacos">
-                                <input type="text" maxlength="2" placeholder="   Enter 354 Grade....."
-                                    required>
-                            </form>
+                            <input type="text" maxlength="2" placeholder="   Enter 354 Grade....." required>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="sec section3">
-                <form action="/tacos">
-                    <input type="button" class="btn">SGPA</button>
-                </form>
+                <button class="btn">S G P A</button>
             </section>
 
 
