--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="index.css">
+    <script>
+        alert('Everything is in under construction..... Not Fully Designed')
+    </script>
 </head>
 
 <body>
