--- a/grade.html
+++ b/grade.html
@@ -89,12 +89,18 @@
                 </div>
             </section>
             <section class="sec section3">
-                <button class="btn">S G P A</button>
+                <button class="btn" onclick="
+                    hello();
+                ">S G P A</button>
+                <span class="last"></span>
             </section>
-
-
         </div>
     </div>
+    <script src="grade.js">
+
+        
+
+    </script>
 </body>
 
 </html>
