--- a/grade.html
+++ b/grade.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3-1 Semester SGPA</title>
+    <title>SGPA Converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <div class="page2">
         <div class="all-data">
             <section class="sec section1">
-                <div class="head-content">3-1 Semester SGPA</div>
+                <div class="head-content">Grades to SGPA Converter</div>
             </section>
             <section class="sec section2">
                 <div class="details">
