--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="heading">Welcome Everyone, Hope You All Doing Well.</div>
             <div class="content-block">
                 <a href="grade.html" target="_blank">3-1 Semester SGPA</a>
-                <a href="#" target="_blank">5 Semesters Percentage</a>
+                <a href="percentage.html" target="_blank">5 Semesters Percentage</a>
             </div>
         </div>
     </div>
