--- a/grade.html
+++ b/grade.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SGPA Converter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grade.css">
 </head>
 
 <body>
@@ -88,17 +88,17 @@
                     </div>
                 </div>
             </section>
-            <section class="sec section3">
-                <button class="btn" onclick="
-                    hello();
-                ">S G P A</button>
-                <span class="last"></span>
+            <section class="sec section">
+                <div class="content1">
+                    <button class="gpa-btn" onclick="hello()">S G P A</button>
+                    <!-- <span class="last"></span> -->
+                </div>
             </section>
         </div>
     </div>
     <script src="grade.js">
 
-        
+
 
     </script>
 </body>
