--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="page1">
         <div class="basic-info">
-            <div class="heading">Welcome Everyone, Hope You All Doing Well.</div>
+            <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
-                <a href="grade.html" target="_blank">3-1 Semester SGPA</a>
-                <a href="percentage.html" target="_blank">5 Semesters Percentage</a>
+                <a href="grade.html" target="_blank">3-1 Semester Grades To SGPA</a>
+                <a href="percentage.html" target="_blank">5 Semesters Percentage Calculator</a>
             </div>
         </div>
     </div>
