--- a/percentage.html
+++ b/percentage.html
@@ -19,35 +19,35 @@
                         <!-- <div class="sub sub-detail1">CSE 311</div> -->
                         <div class="sub sub-detail2">1st Semester SGPA</div>
                         <div class="sub sub-detail3">
-                            <input type="number" maxlength="2" placeholder="   Enter....." required>
+                            <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail2">
                         <!-- <div class="sub sub-detail1">CSE 312</div> -->
                         <div class="sub sub-detail2">2nd Semester SGPA</div>
                         <div class="sub sub-detail3">
-                            <input type="number" maxlength="2" placeholder="   Enter....." required>
+                            <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail3">
                         <!-- <div class="sub sub-detail1">CSE 313</div> -->
                         <div class="sub sub-detail2">3rd Semester SGPA</div>
                         <div class="sub sub-detail3">
-                            <input type="number" maxlength="2" placeholder="   Enter....." required>
+                            <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail4">
                         <!-- <div class="sub sub-detail1">CSE 314</div> -->
                         <div class="sub sub-detail2">4th Semester SGPA</div>
                         <div class="sub sub-detail3">
-                            <input type="number" maxlength="2" placeholder="   Enter....." required>
+                            <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail5">
                         <!-- <div class="sub sub-detail1">CSE 315</div> -->
                         <div class="sub sub-detail2">5th Semester SGPA</div>
                         <div class="sub sub-detail3">
-                            <input type="number" maxlength="2" placeholder="   Enter....." required>
+                            <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                 </div>
