--- a/grade.html
+++ b/grade.html
@@ -91,7 +91,9 @@
             <section class="sec section">
                 <div class="content1">
                     <button class="gpa-btn" onclick="hello()">S G P A</button>
-                    <!-- <span class="last"></span> -->
+                </div>
+                <div class="content2">
+                    
                 </div>
             </section>
         </div>
