--- a/grade.html
+++ b/grade.html
@@ -92,9 +92,7 @@
                 <div class="content1">
                     <button class="gpa-btn" onclick="hello()">S G P A</button>
                 </div>
-                <div class="content2">
-                    
-                </div>
+                <div class="content2"></div>
             </section>
         </div>
     </div>
