--- a/grade.html
+++ b/grade.html
@@ -90,16 +90,15 @@
             </section>
             <section class="sec section">
                 <div class="content1">
-                    <button class="gpa-btn" onclick="hello()">S G P A</button>
+                    <button class="gpa-btn" onclick="calculate()">S G P A</button>
                 </div>
-                <div class="content2"></div>
+                <div class="content2">
+                </div>
             </section>
         </div>
     </div>
+
     <script src="grade.js">
-
-
-
     </script>
 </body>
 
