--- a/grade.html
+++ b/grade.html
@@ -88,12 +88,37 @@
                     </div>
                 </div>
             </section>
-            <section class="sec section">
+            <section class="sec section3">
                 <div class="content1">
                     <button class="gpa-btn" onclick="calculate()">S G P A</button>
                 </div>
                 <div class="content2">
                 </div>
+            </section>
+            <section class="sec section4">
+                <footer class="foot-content">
+                    <div class="query-portion">
+                        <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
+                            <div class="query-head">Any Queries ?</div>
+                            <div class="flex">
+                                <input class="query-input" type="email" placeholder="Email address..." required>
+                                <button class="query-button">Query</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="contact">
+                        <div class="logo">KunK</div>
+                        <div class="footer-links">
+                            <span><img src="SVGs/bxl-github.svg" alt=""></span>
+                            <span><img src="SVGs/bxl-facebook.svg" alt=""></span>
+                            <span><img src="SVGs/bxl-instagram.svg" alt=""></span>
+                            <span><img src="SVGs/bxl-linkedin-square.svg" alt=""></span>
+                          </div>
+                          <div class="copyright">
+                            ©2024 KunK. All rights reserved
+                          </div>
+                    </div>
+                </footer>
             </section>
         </div>
     </div>
