--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="index.css">
-    <script>
+    <!-- <script>
         alert('Everything is in under construction..... Not Fully Designed')
-    </script>
+    </script> -->
 </head>
 
 <body>
@@ -16,8 +16,8 @@
         <div class="basic-info">
             <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
-                <a href="grade.html" target="_blank">3-1 Semester Grades To SGPA</a>
-                <a href="percentage.html" target="_blank">5 Semesters Percentage Calculator</a>
+                <a href="grade.html">3-1 Semester Grades To SGPA</a>
+                <a href="percentage.html">5 Semesters Percentage Calculator</a>
             </div>
         </div>
     </div>
