--- a/grade.html
+++ b/grade.html
@@ -107,16 +107,31 @@
                         </form>
                     </div>
                     <div class="contact">
-                        <div class="logo">KunK</div>
+                        <a class="logo-link" href="index.html" class="logo">KunK</a>
                         <div class="footer-links">
-                            <span><img src="SVGs/bxl-github.svg" alt=""></span>
-                            <span><img src="SVGs/bxl-facebook.svg" alt=""></span>
-                            <span><img src="SVGs/bxl-instagram.svg" alt=""></span>
-                            <span><img src="SVGs/bxl-linkedin-square.svg" alt=""></span>
-                          </div>
-                          <div class="copyright">
-                            ©2024 KunK. All rights reserved
-                          </div>
+                            <span>
+                                <a class="contact-link" href="https://github.com/umanagendrakumar" >
+                                    <img src="SVGs/bxl-github.svg" alt="github">
+                                </a>
+                            </span>
+                            <span>
+                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/" >
+                                    <img src="SVGs/bxl-facebook.svg" alt="facebook">
+                                </a>
+                            </span>
+                            <span>
+                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______" >
+                                    <img src="SVGs/bxl-instagram.svg" alt="instagram">
+                                </a>
+                            </span>
+                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/" >
+                                    <img src="SVGs/bxl-linkedin-square.svg" alt="linkedin">
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="copyright">
+                        ©2024 KunK. All rights reserved
                     </div>
                 </footer>
             </section>
