--- a/grade.html
+++ b/grade.html
@@ -12,7 +12,7 @@
     <div class="page2">
         <div class="all-data">
             <section class="sec section1">
-                <div class="head-content">Grades to SGPA Converter</div>
+                <div class="head-content">Grades to SGPA</div>
             </section>
             <section class="sec section2">
                 <div class="details">
