--- a/grade.html
+++ b/grade.html
@@ -100,6 +100,8 @@
                     <div class="query-portion">
                         <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
                             <div class="query-head">Any Queries ?</div>
+                            <div class="query-minihead">Ex: Which Formula used for SGPA Calculation.</div>
+                            <div class="query-minihead">Ex: Some Errors Found. </div>
                             <div class="flex">
                                 <input class="query-input" type="email" placeholder="Email address..." required>
                                 <button class="query-button">Query</button>
