--- a/percentage.html
+++ b/percentage.html
@@ -11,7 +11,7 @@
     <div class="page2">
         <div class="all-data">
             <section class="sec section1">
-                <div class="head-content">SGPA to Percentage Converter</div>
+                <div class="head-content">SGPA to Percentage</div>
             </section>
             <section class="sec section2">
                 <div class="details">
@@ -52,6 +52,48 @@
                     hello();
                 ">PERCENTAGE</button>
                 <span class="last"></span>
+            </section>
+            <section class="sec section4">
+                <footer class="foot-content">
+                    <div class="query-portion">
+                        <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
+                            <div class="query-head">Any Queries ?</div>
+                            <div class="query-minihead">Ex: Which Formula used for PERCENTAGE Calculation.</div>
+                            <div class="query-minihead">Ex: Some Errors Found. </div>
+                            <div class="flex">
+                                <input class="query-input" type="email" placeholder="Email address..." required>
+                                <button class="query-button">Query</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="contact">
+                        <a class="logo-link" href="index.html" class="logo">KunK</a>
+                        <div class="footer-links">
+                            <span>
+                                <a class="contact-link" href="https://github.com/umanagendrakumar" >
+                                    <img src="SVGs/bxl-github.svg" alt="github">
+                                </a>
+                            </span>
+                            <span>
+                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/" >
+                                    <img src="SVGs/bxl-facebook.svg" alt="facebook">
+                                </a>
+                            </span>
+                            <span>
+                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______" >
+                                    <img src="SVGs/bxl-instagram.svg" alt="instagram">
+                                </a>
+                            </span>
+                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/" >
+                                    <img src="SVGs/bxl-linkedin-square.svg" alt="linkedin">
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="copyright">
+                        ©2024 KunK. All rights reserved
+                    </div>
+                </footer>
             </section>
         </div>
     </div>
