final commit this

--- a/grade.html
+++ b/grade.html
@@ -95,6 +95,13 @@
                 <div class="content2">
                 </div>
             </section>
+
+            <div class="scroll-down">
+                <a href="#cpy" class="down-anchor">
+                    <img class="down-arrow-img" src="SVGs/down-arrow.svg" alt="">
+                </a>
+            </div>
+
             <section class="sec section4">
                 <footer class="foot-content">
                     <div class="query-portion">
@@ -112,27 +119,27 @@
                         <a class="logo-link" href="index.html" class="logo">KunK</a>
                         <div class="footer-links">
                             <span>
-                                <a class="contact-link" href="https://github.com/umanagendrakumar" >
+                                <a class="contact-link" href="https://github.com/umanagendrakumar">
                                     <img src="SVGs/bxl-github.svg" alt="github">
                                 </a>
                             </span>
                             <span>
-                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/" >
+                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/">
                                     <img src="SVGs/bxl-facebook.svg" alt="facebook">
                                 </a>
                             </span>
                             <span>
-                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______" >
+                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______">
                                     <img src="SVGs/bxl-instagram.svg" alt="instagram">
                                 </a>
                             </span>
-                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/" >
+                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/">
                                     <img src="SVGs/bxl-linkedin-square.svg" alt="linkedin">
                                 </a>
                             </span>
                         </div>
                     </div>
-                    <div class="copyright">
+                    <div id="cpy" class="copyright">
                         ©2024 KunK. All rights reserved
                     </div>
                 </footer>
