all issues solved

--- a/grade.html
+++ b/grade.html
@@ -102,7 +102,7 @@
                 </a>
             </div>
 
-            <section class="sec section4">
+            <section  id="cpy" class="sec section4">
                 <footer class="foot-content">
                     <div class="query-portion">
                         <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
@@ -116,7 +116,7 @@
                         </form>
                     </div>
                     <div class="contact">
-                        <a class="logo-link" href="index.html" class="logo">KunK</a>
+                        <a class="logo-link"  href="index.html" class="logo">KunK</a>
                         <div class="footer-links">
                             <span>
                                 <a class="contact-link" href="https://github.com/umanagendrakumar">
@@ -139,7 +139,7 @@
                             </span>
                         </div>
                     </div>
-                    <div id="cpy" class="copyright">
+                    <div class="copyright">
                         ©2024 KunK. All rights reserved
                     </div>
                 </footer>
