--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="index.css">
-    <!-- <script>
-        alert('Everything is in under construction..... Not Fully Designed')
-    </script> -->
 </head>
 
 <body>
@@ -17,7 +14,7 @@
             <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
                 <a href="grade.html">3-1 Semester Grades To SGPA</a>
-                <a href="percentage.html">5 Semesters Percentage Calculator</a>
+                <a href="percentage.html">5 Semesters Percentage</a>
             </div>
         </div>
     </div>
