--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="basic-info">
             <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
-                <a href="grade.html">3-1 Semester Grades To SGPA</a>
+                <a href="grade.html">3-1 Grades To SGPA</a>
                 <a href="percentage.html">5 Semesters Percentage</a>
             </div>
         </div>
