--- a/grade.html
+++ b/grade.html
@@ -116,7 +116,9 @@
                         </form>
                     </div>
                     <div class="contact">
-                        <a class="logo-link"  href="index.html" class="logo">KunK</a>
+                        <a class="logo-link"  href="index.html" class="logo">
+                            <img src="Images/logo.png" alt="logo" class="logo-image">
+                        </a>
                         <div class="footer-links">
                             <span>
                                 <a class="contact-link" href="https://github.com/umanagendrakumar">
