--- a/grade.html
+++ b/grade.html
@@ -117,9 +117,12 @@
                     </div>
                     <div class="contact">
                         <div class="logo">
-                            <a class="logo-link"  href="index.html" class="logo">
+                            <!-- <a class="logo-link"  href="index.html" class="logo">
                                 <img src="Images/logo.png" alt="logo" class="logo-image">
-                            </a>
+                            </a> -->
+                            <div class="copyright">
+                                ©2024 KunK. All rights reserved
+                            </div>
                         </div>
                         <div class="footer-links">
                             <span>
@@ -143,9 +146,9 @@
                             </span>
                         </div>
                     </div>
-                    <div class="copyright">
+                    <!-- <div class="copyright">
                         ©2024 KunK. All rights reserved
-                    </div>
+                    </div> -->
                 </footer>
             </section>
         </div>
