--- a/percentage.html
+++ b/percentage.html
@@ -67,8 +67,10 @@
                         </form>
                     </div>
                     <div class="contact">
-                        <div class="copyright">
-                            ©2024 KunK. All rights reserved
+                        <div class="logo">
+                            <a href="index.html" class="logo-a">
+                                <img src="Images/logo.png" alt="logo" class="logo-img">
+                            </a>
                         </div>
                         <div class="footer-links">
                             <span>
@@ -92,7 +94,9 @@
                             </span>
                         </div>
                     </div>
-                    
+                    <div class="copyright">
+                        ©2024 KunK. All rights reserved
+                    </div> 
                 </footer>
             </section>
         </div>
