--- a/grade.html
+++ b/grade.html
@@ -117,9 +117,9 @@
                     </div>
                     <div class="contact">
                         <div class="logo">
-                            <div class="copyright">
-                                ©2024 KunK. All rights reserved
-                            </div>
+                            <a href="index.html" class="logo-a">
+                                <img src="Images/logo.png" alt="logo" class="logo-img">
+                            </a>
                         </div>
                         <div class="footer-links">
                             <span>
@@ -143,9 +143,9 @@
                             </span>
                         </div>
                     </div>
-                    <!-- <div class="copyright">
+                    <div class="copyright">
                         ©2024 KunK. All rights reserved
-                    </div> -->
+                    </div>
                 </footer>
             </section>
         </div>
