--- a/percentage.html
+++ b/percentage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Percentage Converter</title>
     <script src="percentage.js"></script>
 </head>
+
 <body>
     <div class="page2">
         <div class="all-data">
@@ -48,10 +50,11 @@
                 </div>
             </section>
             <section class="sec section3">
-                <button class="btn" onclick="
-                    hello();
-                ">PERCENTAGE</button>
-                <span class="last"></span>
+                <div class="percentage-btn">
+                    <button class="btn percent-btn" onclick="percentage(1);">PERCENTAGE</button>
+                    <button class="btn cgpa-button" onclick="percentage(2)">CGPA</button>
+                    <div class="last"></div>
+                </div>
             </section>
             <section class="sec section4">
                 <footer class="foot-content">
@@ -74,21 +77,21 @@
                         </div>
                         <div class="footer-links">
                             <span>
-                                <a class="contact-link" href="https://github.com/umanagendrakumar" >
+                                <a class="contact-link" href="https://github.com/umanagendrakumar">
                                     <img src="SVGs/bxl-github.svg" alt="github">
                                 </a>
                             </span>
                             <span>
-                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/" >
+                                <a class="contact-link" href="https://www.facebook.com/lazyKUNK/">
                                     <img src="SVGs/bxl-facebook.svg" alt="facebook">
                                 </a>
                             </span>
                             <span>
-                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______" >
+                                <a class="contact-link" href="https://www.instagram.com/lazy__monarch______">
                                     <img src="SVGs/bxl-instagram.svg" alt="instagram">
                                 </a>
                             </span>
-                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/" >
+                            <span><a class="contact-link" href="https://www.linkedin.com/in/kunk/">
                                     <img src="SVGs/bxl-linkedin-square.svg" alt="linkedin">
                                 </a>
                             </span>
@@ -96,10 +99,11 @@
                     </div>
                     <div class="copyright">
                         ©2024 KunK. All rights reserved
-                    </div> 
+                    </div>
                 </footer>
             </section>
         </div>
     </div>
 </body>
+
 </html>
