--- a/percentage.html
+++ b/percentage.html
@@ -55,6 +55,9 @@
                     <button class="btn cgpa-button" onclick="percentage(2)">CGPA</button>
                     <div class="last"></div>
                 </div>
+                <div class="proof">
+                    <img src="Images/formula.png" class="formula-img" alt="formula">
+                </div>
             </section>
             <section class="sec section4">
                 <footer class="foot-content">
