--- a/index.html
+++ b/index.html
@@ -13,12 +13,53 @@
         <div class="basic-info">
             <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
-                <a href="grade.html">3-1 Grades To SGPA</a>
+                <a href="grade.html">3-1 Grades to SGPA</a>
                 <a href="percentage.html">5 Semesters Percentage</a>
             </div>
         </div>
     </div>
+    <script>
+        setTimeout(() => {
+            document.body.style.backgroundColor = "orange";
+        }, 1000);
+        setTimeout(() => {
+            document.body.style.backgroundColor = "yellow";
+        }, 2000);
+        setTimeout(() => {
+            document.body.style.backgroundColor = "yellogreen";
+        }, 3000);
+        setTimeout(() => {
+            document.body.style.backgroundColor = "cyan";
+        }, 4000);
+        setTimeout(() => {
+            document.body.style.backgroundColor = "violet";
+        }, 5000);
+        setTimeout(() => {
+            document.body.style.backgroundColor = "brown";
+        }, 6000);
 
+        
+        setInterval(() => {
+            setTimeout(() => {
+                document.body.style.backgroundColor = "orange";
+            }, 1000);
+            setTimeout(() => {
+                document.body.style.backgroundColor = "yellow";
+            }, 2000);
+            setTimeout(() => {
+                document.body.style.backgroundColor = "yellowgreen";
+            }, 3000);
+            setTimeout(() => {
+                document.body.style.backgroundColor = "cyan";
+            }, 4000);
+            setTimeout(() => {
+                document.body.style.backgroundColor = "violet";
+            }, 5000);
+            setTimeout(() => {
+                document.body.style.backgroundColor = "brown";
+            }, 6000);
+        }, 6000);
+    </script>
 </body>
 
 </html>
