--- a/grade.html
+++ b/grade.html
@@ -90,10 +90,12 @@
             </section>
             <section class="sec section3">
                 <div class="content1">
-                    <button class="gpa-btn" onclick="calculate()">S G P A</button>
+                    <button class="gpa-btn" onclick="calculate();">S G P A</button>
                 </div>
-                <div class="content2">
+                <div class="content3">
+                    <button class="gpa-btn greet-btn" onclick="calculate('greet');">GREETING</button>
                 </div>
+                <div class="content2"></div>
             </section>
 
             <div class="scroll-down">
@@ -102,7 +104,7 @@
                 </a>
             </div>
 
-            <section  id="cpy" class="sec section4">
+            <section id="cpy" class="sec section4">
                 <footer class="foot-content">
                     <div class="query-portion">
                         <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
