--- a/percentage.html
+++ b/percentage.html
@@ -52,7 +52,7 @@
             <section class="sec section3">
                 <div class="percentage-btn">
                     <button class="btn percent-btn" onclick="percentage(1);">PERCENTAGE</button>
-                    <button class="btn cgpa-button" onclick="percentage(2)">CGPA</button>
+                    <button class="btn cgpa-button" onclick="percentage(2);">CGPA</button>
                     <div class="last"></div>
                 </div>
                 <div class="proof">
