--- a/grade32.html
+++ b/grade32.html
@@ -17,73 +17,73 @@
             <section class="sec section2">
                 <div class="details">
                     <div class="detail detail1">
-                        <div class="sub sub-detail1">CSE 311</div>
-                        <div class="sub sub-detail2">Automata Theory & Compiler Design</div>
+                        <div class="sub sub-detail1">CSE 321</div>
+                        <div class="sub sub-detail2">Cryptography & Network Security</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 311 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 321 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail2">
-                        <div class="sub sub-detail1">CSE 312</div>
-                        <div class="sub sub-detail2">Java Programming</div>
+                        <div class="sub sub-detail1">CSE 322</div>
+                        <div class="sub sub-detail2">Data Engineering</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 312 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 322 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail3">
-                        <div class="sub sub-detail1">CSE 313</div>
-                        <div class="sub sub-detail2">Design & Analysis of Algorithms</div>
+                        <div class="sub sub-detail1">CSE 323</div>
+                        <div class="sub sub-detail2">Web Technology</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 313 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 323 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail4">
-                        <div class="sub sub-detail1">CSE 314</div>
-                        <div class="sub sub-detail2">Artificial Intelligence & Machine Learning</div>
+                        <div class="sub sub-detail1">CSE 324</div>
+                        <div class="sub sub-detail2">Network Programming</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 314 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 324 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail5">
-                        <div class="sub sub-detail1">CSE 315</div>
-                        <div class="sub sub-detail2">Computer Networks</div>
+                        <div class="sub sub-detail1">CSE 325</div>
+                        <div class="sub sub-detail2">Cloud Computing</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 315 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 325 Grade....." required>
                         </div>
                     </div>
-                    <div class="detail detail6">
+                    <!-- <div class="detail detail6">
                         <div class="sub sub-detail1">CSE 316</div>
                         <div class="sub sub-detail2">Constitution of India</div>
                         <div class="sub sub-detail3">
                             <input type="text" maxlength="2" placeholder="   Enter 316 Grade.....">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="detail detail7">
-                        <div class="sub sub-detail1">CSE 351</div>
-                        <div class="sub sub-detail2">Java Lab</div>
+                        <div class="sub sub-detail1">CSE 361</div>
+                        <div class="sub sub-detail2">Data Engineering Lab</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 351 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 361 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail8">
-                        <div class="sub sub-detail1">CSE 352</div>
-                        <div class="sub sub-detail2">AIML Lab</div>
+                        <div class="sub sub-detail1">CSE 362</div>
+                        <div class="sub sub-detail2">Web Technology Lab</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 352 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 362 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail9">
-                        <div class="sub sub-detail1">CSE 353</div>
-                        <div class="sub sub-detail2">Mobile Application Development Lab</div>
+                        <div class="sub sub-detail1">CSE 363</div>
+                        <div class="sub sub-detail2">Network Programming Lab</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 353 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 363 Grade....." required>
                         </div>
                     </div>
                     <div class="detail detail10">
-                        <div class="sub sub-detail1">CSE 354</div>
-                        <div class="sub sub-detail2">Internship Program</div>
+                        <div class="sub sub-detail1">CSE 364</div>
+                        <div class="sub sub-detail2">Full Stack Lab</div>
                         <div class="sub sub-detail3">
-                            <input type="text" maxlength="2" placeholder="   Enter 354 Grade....." required>
+                            <input type="text" maxlength="2" placeholder="   Enter 364 Grade....." required>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
         </div>
     </div>
 
-    <script src="grade.js">
+    <script src="grade32.js">
     </script>
 </body>
 
