--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
             <div class="content-block">
                 <a href="grade.html">3-1 Grades to SGPA</a>
-                <a href="percentage.html">5 Semesters Percentage</a>
+                <a href="grade32.html">3-2 Grades to SGPA</a>
+                <a href="percentage.html">6 Semesters Percentage</a>
             </div>
         </div>
     </div>
     <script>
-        alert('If Any Updation Required, You Can DM');
+        alert('under construction for 3-2 Semester.');
         setTimeout(() => {
             document.body.style.backgroundColor = "orange";
         }, 1000);
