--- a/percentage.html
+++ b/percentage.html
@@ -47,6 +47,13 @@
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
+                    <div class="detail detail6">
+                        <div class="sub sub-detail2">6th Semester SGPA</div>
+                        <div class="sub sub-detail3">
+                            <input type="number" placeholder="   Enter....." required>
+                        </div>
+                    </div>
+                    
                 </div>
             </section>
             <section class="sec section3">
@@ -64,11 +71,11 @@
                     <div class="query-portion">
                         <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
                             <div class="query-head">Any Queries ?</div>
-                            <div class="query-minihead">Ex: Which Formula used for PERCENTAGE Calculation.</div>
-                            <div class="query-minihead">Ex: Some Errors Found. </div>
+                            <!-- <div class="query-minihead">Ex: Which Formula used for PERCENTAGE Calculation.</div>
+                            <div class="query-minihead">Ex: Some Errors Found. </div> -->
                             <div class="flex">
-                                <input class="query-input" type="email" placeholder="Email address..." required>
-                                <button class="query-button">Query</button>
+                                <!-- <input class="query-input" type="email" placeholder="Email address..." required> -->
+                                <button class="query-button">Raise a Query</button>
                             </div>
                         </form>
                     </div>
