--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <script>
-        alert('under construction for 3-2 Semester.');
+        <!-- alert('under construction for 3-2 Semester.'); -->
         setTimeout(() => {
             document.body.style.backgroundColor = "orange";
         }, 1000);
