--- a/indexCE.html
+++ b/indexCE.html
@@ -11,15 +11,13 @@
 <body>
     <div class="page1">
         <div class="basic-info">
-            <div class="heading">Welcome Everyone,<br>Hope You All Doing Well.</div>
+            <div class="heading">Civil</div>
             <div class="content-block">
-                <a href="grade.html">3-1 Grades to SGPA</a>
-                <a href="grade32.html">3-2 Grades to SGPA</a>
-                <a href="percentage.html">6 Semesters Percentage</a>
+                <a href="grade21CE.html">2-1 Grades to SGPA</a>
+                <a href="grade22CE.html">2-2 Grades to SGPA</a>
+                <a href="grade31CE.html">3-1 Grades to SGPA</a>
             </div>
-            <div class="civil-link"><a href="indexCE.html">Civil</a></div>
         </div>
-        
     </div>
     
 </body>
