--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content-block">
                 <a href="grade.html">3-1 Grades to SGPA</a>
                 <a href="grade32.html">3-2 Grades to SGPA</a>
-                <a href="percentage.html">6 Semesters Percentage</a>
+                <a href="percentage.html">6 Sems %</a>
             </div>
             <div class="civil-link"><a href="indexCE.html">Civil</a></div>
         </div>
